[fix]起動パラメータ追加